cabal-version:      3.0
name:               json-fact-statement-store
version:            0.1.0.0
maintainer:         bladyjoker@gmail.com
author:             Drazen Popovic
extra-source-files: CHANGELOG.md

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists -Wname-shadowing
    -Wunused-packages

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

executable json-fs-store-cli
  import:         common-language
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded
  other-modules:
    BeamConfig
    FactStatementStoreGrpc
    Genesis
    InsertFs

  build-depends:
    , aeson
    , base
    , beam-core
    , beam-sqlite
    , bytestring
    , cardano-proto-extras
    , coop-fact-statement-store-service-proto
    , http2-grpc-proto-lens
    , http2-grpc-types
    , lens
    , optparse-applicative
    , plutus-json
    , plutus-tx
    , proto-lens
    , sqlite-simple
    , text
    , warp
    , warp-grpc
    , warp-tls
