cabal-version:      2.4
name:               plutus-json
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Drazen Popovic
maintainer:         bladyjoker@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable plutus-json
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base
  hs-source-dirs:   app
  default-language: Haskell2010

library
  build-depends:
    , aeson
    , base
    , plutus-tx
    , scientific
    , text
    , vector

  exposed-modules:  PlutusJson
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite plutus-json-tests
  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , hspec
    , plutus-json
    , plutus-tx
    , QuickCheck
    , tasty
    , text

  hs-source-dirs:   test
  main-is:          Main.hs
  type:             exitcode-stdio-1.0
