cabal-version:      2.4
name:               plutus-json
version:            0.1.0.0
maintainer:         bladyjoker@gmail.com
author:             Drazen Popovic
extra-source-files: CHANGELOG.md

library
  exposed-modules:  PlutusJson
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , plutus-tx
    , scientific
    , text
    , vector

executable plutus-json-cli
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , bytestring
    , optparse-applicative
    , plutus-json
    , plutus-tx
    , serialise

test-suite plutus-json-tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , hspec
    , plutus-json
    , plutus-tx
    , QuickCheck
    , tasty
    , text
